Issue 6835 (Network Traffic Panel does't show horizontal scroll bar) http://code.google.com/p/fbug/issues/detail?id=6835

--- a/extension/skin/classic/net.css
+++ b/extension/skin/classic/net.css
@@ -1,9 +1,5 @@
 /* See license.txt for terms of usage */
 
-.panelNode-net {
-    overflow-x: hidden;
-}
-
 .netTable {
     width: 100%;
 }
@@ -241,9 +237,11 @@
     display: none;
     -moz-user-select: none;
     padding-right: 10px;
-    max-width: 100%;
+    padding-bottom: 2px;
+    max-width: -moz-calc(100% - 38px);
     background: #FFFFFF;
     z-index: 200;
+    text-overflow: ellipsis;
 }
 
 .netHrefCol:hover > .netFullHrefLabel {
